# c5d

./: .gitignore  CMakeLists.txt  README.md
cmake/recipes/: assimp.cmake  boost.cmake  eigen.cmake  json.cmake  libccd.cmake  libigl.cmake  onetbb.cmake  tinygltf.cmake  yaml-cpp.cmake
configs/: base.yaml  base_10k.yaml  verts256_10k.yaml  verts256_1k.yaml
scripts/: plot_curve.py
src/: ACCD.cpp  ACCD.hpp  CMakeLists.txt  DataConfig.hpp  DataPoint.hpp  Dataset.hpp  c5d_exp.cpp  c5d_exp.hpp  compare.cpp  datagen.cpp  gjk.cpp  gjk.hpp
src/distances/: CMakeLists.txt  distance_utils.hpp  distances.hpp  ee_classify.cpp  ee_classify.hpp  ee_distance.cpp  ee_distance.hpp  ve_distance.cpp  ve_distance.hpp  vt_classify.cpp  vt_classify.hpp  vt_distance.cpp  vt_distance.hpp  vv_distance.cpp  vv_distance.hpp
